@@ -1,3 +1,8 @@
+2006-04-09  Alex Roitman  <shura@gramps-project.org>
+	* src/ViewManager.py (ViewManager.create_pages): Use toggle
+	buttons on the sidebar.
+	(ViewManager.change_page): Turn off previously active button.
+
 2006-04-09  Brian Matherly  <pez4brian@users.sourceforge.net>
 	* src/docgen/ODFDoc.py: Improve graphic alignment (Bug 1370498)
 	* src/docgen/OpenOfficeDoc.py: Improve graphic alignment (Bug 1370498)
